- Updated - Gutenberg patterns module - implement by default instead of using Integration interface
- Updated - Core support keys cannot be set/unset/changed
- Updated - core/social-links sharing variation is now registered in php
- Updated - core/group marquee variation is now registered in php
- Fixed - CodeMirror on editor text view in Site Editor screen
- Fixed - issue with navigation dropdown active class condition
- Fixed - properly enqueue wecodeart( 'styles' ) Components and Utilities cache file
- Added - wecodeart/filter/gutenberg/block/details/seo filter to enable SEO (FAQ Page) support for Details block (boolean)
- Added - wecodeart/filter/gutenberg/block/code/hljs filter to enable syntax highlight for core/code block
- Added - outlined/sharp/crisp box-shadow controlled via custom box shadow theme.json
- Added - box-shadow support for core/group, core/columns, core/column block

v6.3.6
- Fixed - typo for upcomming collapse script in minified assets folder

v6.3.5
- Removed - hstack/vstack helper classes in favor of core/group block variations
- Removed - Deprecated core/group marquee variation - keept styles though just in case
- Updated - core/group marquee to enquee marquee styles only if this variation is used (micro optimization)
- Updated - deprecated wecodeart( 'styles' )::get_duotone function (not used anymore)
- Updated - Modules will now be located into 'modules' key in theme options (previously: 'installed_modules')
- Updated - moved grid classes (span-# and start-#) into utilities module (saves 13kb of minified css / enqueued when used)
- Updated - base styles (small reboot and couple of helpers) are now enqueued into global styles
- Fixed - issue with RankMath FAQ block being converted to core/details block (if div selector is set)
- Fixed - wecodeart( 'style' )->Components->load( [ ...] ) loading multiple instances of the same item
- Added - core/column support for background image