@@ -1,1 +1,1 @@
-.wp-block-query__enhanced-pagination-animation{position:fixed;top:0;left:0;max-width:100vw;width:100vw;height:4px;margin:0;padding:0;opacity:0}.wp-block-query__enhanced-pagination-animation.start-animation{animation:wp-pagination-start-animation 30s cubic-bezier(0.03,0.5,0,1) forwards}.wp-block-query__enhanced-pagination-animation.finish-animation{animation:wp-pagination-finish-animation 0.3s ease-in}:is(.wp-interactivity-router-loading-bar.wp-interactivity-router-loading-bar,.wp-block-query__enhanced-pagination-animation){background-color:var(--wp--preset--color--primary,#000);z-index:1050}@keyframes wp-pagination-start-animation{0%{opacity:1;transform:scaleX(0);transform-origin:0 0}to{opacity:1;transform:scaleX(1);transform-origin:0 0}}@keyframes wp-pagination-finish-animation{0%{opacity:1}50%{opacity:1}to{opacity:0}}
+*[class*='pagination-animation']{position:fixed;top:0;left:0;height:4px;width:100vw;max-width:100vw;margin:0!important;padding:0!important;opacity:0}*[class*='pagination-animation'].start-animation{animation:wp-pagination-start-animation 30s cubic-bezier(0.03,0.5,0,1) forwards}*[class*='pagination-animation'].finish-animation{animation:wp-pagination-finish-animation 0.3s ease-in}:is(.wp-interactivity-router-loading-bar.wp-interactivity-router-loading-bar,*[class*='pagination-animation']){background-color:var(--wp--preset--color--primary,#000);z-index:1050}@keyframes wp-pagination-start-animation{0%{opacity:1;transform:scaleX(0);transform-origin:0 0}to{opacity:1;transform:scaleX(1);transform-origin:0 0}}@keyframes wp-pagination-finish-animation{0%{opacity:1}50%{opacity:1}to{opacity:0}}
